Test removing temp fix